- Fixed issue with dark mode

--- a/static/css/basics.css
+++ b/static/css/basics.css
@@ -1,4 +1,5 @@
 :root {
+    --primary-bg: #16181d;
     --font-family: 'Comfortaa-Light';
     --primary-clr: #76bcbb;
     --primary-clr-acc: #92cfce;
